<resources>
    <string name="app_name">AstroPlay</string>
    <string name="login_text">INICIAR SESIÓN</string>
    <string name="continue_google">CONTINUAR CON GOOGLE</string>
    <string name="app_introduction">Descubre un universo lleno de películas y series estelares al alcance de tus dedos</string>
    <string name="menu_home">INICIO</string>
    <string name="menu_profile">PERFIL</string>
    <string name="my_profile_title">Mi Perfil</string>
    <string name="menu_favorites">FAVORITOS</string>
    <string name="menu_series">SERIES</string>
    <string name="menu_explore">EXPLORA</string>
    <string name="title_explore">Explora</string>
    <string name="notifications_title">Notificaciones</string>
    <string name="wanna_see">¿Que deseas ver hoy?</string>
    <string name="home_welcome_text">Hola, %s</string>
    <string name="search_movie">Buscar pelicula…</string>
    <string name="see_now">VER AHORA</string>
    <string name="director_text">Director: %s</string>
    <string name="cast_text">Reparto: %s</string>
    <string name="web_client_id">478323186494-v5cb5qso4mimrnd3q0q9nct9aairpshm.apps.googleusercontent.com</string>
    <string name="search_movie_title">Realizar una busqueda…</string>
    <string name="popular_movies_title">Peliculas más populares</string>
    <string name="my_favorites_list">Lista de Favoritos</string>
    <string name="empty_favorites">Aún no has añadido un elemento a tu lista de favoritos.</string>
    <string name="recomended_movies_title">Recomendadas</string>
    <string name="last_movies_title">Ultimas añadidas</string>
    <string name="random_movies_title">Selección random</string>
    <string name="version_info" translatable="false">AstroPlay v%s</string>
    <string name="role_user_1">Usuario</string>
    <string name="role_user_2">Premium</string>
    <string name="role_user_3">Administrador</string>
    <string name="logout_title">Cerrar Sesión</string>
    <string name="logout_message">¿Estas seguro que deseas salir?</string>
    <string name="cancel">Cancelar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="login_error">Error al iniciar sesión: %s</string>
    <string name="terms_and_conditions">Terminos y Condiciones</string>
    <string name="press_twice_text">Presione Atrás nuevamente para salir.</string>
    <string name="forgot_txt">¿Has olvidado tu contraseña?</string>
    <string name="email_field">Correo</string>
    <string name="pass_field">Contraseña</string>
    <string name="register_text">Registrarse</string>
    <string name="create_account_txt">¿Aún no tienes una cuenta?</string>
    <string name="email_error">Por favor, ingrese un correo electrónico válido.</string>
    <string name="pass_error">Por favor, ingrese una contraseña válida,</string>
    <string name="user_exist_txt">¿Ya tienes una cuenta?</string>
    <string name="pass_confirm_field">Confirmar contraseña</string>
    <string name="empty_fields_error">Por favor, complete todos los campos.</string>
    <string name="pass_confirm_error">Las contraseñas no coinciden. Por favor, verifíquelas.</string>
    <string name="user_created_success">✅ Usuario registrado con éxito. Ahora debes Iniciar Sesión.</string>
    <string name="user_created_error">❌ Error al registrar el usuario: %s</string>
    <string name="disabled_account_title">Cuenta Inhabilitada</string>
    <string name="disabled_account_message">Tu cuenta ha sido inhabilitada. Si crees que esto es un error, comunícate con el soporte.</string>
    <string name="understand">ENTENDIDO</string>
    <string name="btn_admin_tools">Admin Tools</string>
    <string name="disable_user">Desactivar Usuario</string>
    <string name="update_user">Actualizar Usuario</string>
    <string name="update">ACTUALIZAR</string>
    <string name="user_email_not_found">No se ha encontrado un usuario con este correo.</string>
    <string name="user_updated">✅ Usuario Actualizado.</string>
    <string name="update_string"><b>Hay una nueva versión disponible.</b>\nLe invitamos a actualizar la aplicación.</string>
    <string name="user_update_error">Ha ocurrido un error al actualizar el usuario.</string>
    <string name="update_app_title">ACTUALIZACIÓN</string>
    <string name="but_update">ACTUALIZAR</string>
    <string name="default_notification_channel_id">astroplay_notify</string>
    <string name="licences">Licencias</string>
    <string name="manage_user">Administrar usuario</string>
    <string name="continuee">CONTINUAR</string>
    <string name="continue_playing">CONTINUAR VIENDO</string>
    <string name="continue_playing_message">¿Deseas continuar viendo la película desde donde la dejaste?</string>
    <string name="empty_notifications">No tienes notificaciones.</string>
    <string name="send_request">Enviar solicitud</string>
    <string name="title_field">Titulo</string>
    <string name="request_movie">Solicitar Contenido</string>
    <string name="request_activity_info">Utiliza este formulario para solicitar una película o serie que desees ver en nuestra app. Revisaremos tu solicitud a la brevedad y nos esforzaremos por agregar el contenido solicitado lo más pronto posible. Recuerda que solo puedes realizar una solicitud por día. ¡Gracias por ayudarnos a mejorar nuestra selección!</string>
    <string name="love_message">Hecho con ❤️ por AstroPlay</string>
    <string name="description_field">Descripción (Opcional)</string>
    <string name="profile_updated_success">✅ Usuario actualizado.</string>
    <string name="error_default">Ha ocurrido un error: %s</string>
    <string name="new_name_error">Escriba un nombre válido.</string>
    <string name="edit_profile_title">Editar Perfil</string>
    <string name="name_field">Nombre</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="app_disabled_title">Mantenimiento</string>
    <string name="app_disabled_message">La aplicación está en mantenimiento y no está disponible en este momento. Volveremos pronto. ¡Gracias por tu paciencia!</string>
    <string name="rate_movie_title">CALIFICAR PELICULA</string>
    <string name="rate_movie">CALIFICAR</string>
    <string name="rate_sent">✅ Calificación enviada.</string>
    <string name="rate_sent_error">❌ Error al enviar calificación.</string>
    <string name="best_rated_title">Mejores calificadas</string>
    <string name="info">Información</string>
    <string name="cannot_request_mesage">Ya has agotado tus peticiones diarias, para realizar otra petición intentalo nuevamente mañana. ;)</string>
    <string name="blocked_device_info">Lo sentimos, pero tu dispositivo ha sido bloqueado debido a acciones indebidas previas en nuestra aplicación. Si crees que esto es un error, por favor contacta a nuestro equipo de soporte para obtener más información y ayuda.</string>
    <string name="blocked_device_title">Dispositivo bloqueado</string>
    <string name="request_sent">✅ Solicitud enviada con éxito.</string>
    <string name="request_error_sent">Error al enviar solicitud, intentelo nuevamente.</string>
    <string name="title_required_error">El título es obligatorio</string>
    <string name="channel_name">astroplay_notify</string>
    <string name="channel_description">AstroPlay Notificaciones</string>
    <string name="share_title">Te recomiendo esta pelicula!</string>
    <string name="dmca_policies">Terminos DMCA</string>
</resources>