<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_black"
    tools:context=".view.RequestActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/requestTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/request_movie"
            android:textColor="@color/palette_white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/txtCreateUser"
            android:text="@string/request_activity_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="15dp"
            android:textColor="@color/palette_white_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/palette_white"
            app:boxStrokeColor="@color/palette_white"
            app:placeholderTextColor="@color/palette_white"
            app:startIconDrawable="@drawable/ic_movie"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="textCapSentences"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/palette_white"
            app:boxStrokeColor="@color/palette_white"
            app:placeholderTextColor="@color/palette_white"
            app:startIconDrawable="@drawable/ic_subtitles"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="15dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="textCapSentences"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="12dp"
            android:text="@string/send_request"
            android:textColor="@color/palette_white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="@color/palette_red"
            app:cornerRadius="10dp"
            app:iconTint="@color/palette_white"
            app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:lottie_rawRes="@raw/loading_space"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/loveText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/palette_gray"
        android:text="@string/love_message"
        />
</androidx.constraintlayout.widget.ConstraintLayout>