<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_black"
    tools:context=".view.AuthenticationActivity">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="33sp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:textColor="@color/palette_white"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animIntro"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/movie_intro"
        android:visibility="visible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_margin="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintBottom_toTopOf="@+id/txtIntro"
        />
    <TextView
        android:id="@+id/txtIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/palette_white"
        android:text="@string/app_introduction"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_text"
        android:textStyle="bold"
        android:visibility="visible"
        app:cornerRadius="10dp"
        style="@style/Widget.MaterialComponents.Button"
        app:backgroundTint="@color/palette_red"
        android:textSize="15sp"
        android:textColor="@color/palette_white"
        android:layout_marginHorizontal="10dp"
        android:paddingVertical="12dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/palette_white"
        android:text="@string/continue_google"
        android:layout_marginBottom="50dp"
        app:strokeColor="@color/palette_white"
        android:textStyle="bold"
        android:visibility="visible"
        app:cornerRadius="15dp"
        app:icon="@drawable/google_icon"
        app:iconTint="@color/palette_white"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:lottie_rawRes="@raw/progress"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:scaleType="fitXY"
        android:layout_marginTop="-30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>