<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_black"
    tools:context=".view.EditProfileActivity">
    <LinearLayout
        android:id="@+id/editProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/exploreTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/edit_profile_title"
        android:textColor="@color/palette_white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginVertical="15dp"
            android:layout_gravity="center_horizontal"
            tools:src="@drawable/default_user"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/palette_white"
            app:boxStrokeColor="@color/palette_white"
            app:placeholderTextColor="@color/palette_white"
            app:startIconDrawable="@drawable/ic_person"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins"
                android:inputType="textCapSentences"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/save_changes"
            android:textColor="@color/palette_white"
            app:backgroundTint="@color/palette_red"
            style="@style/Widget.MaterialComponents.Button"
            android:textSize="20sp"
            app:cornerRadius="15dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="8dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/loveText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textSize="13sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/palette_gray"
        android:text="@string/love_message"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:lottie_rawRes="@raw/progress"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="@+id/editProfileLayout"
        app:layout_constraintBottom_toBottomOf="@+id/editProfileLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
